--- a/Application/package.json
+++ b/Application/package.json
@@ -1,13 +1,13 @@
 {
-    "name": "application",
+    "name": "kubernetes-cluster",
     "devDependencies": {
-        "@types/node": "^10.0.0"
+        "@types/node": "^14.0.0"
     },
     "dependencies": {
-        "@pulumi/aws": "^3.21.0",
-        "@pulumi/awsx": "^0.23.0",
-        "@pulumi/kubernetes": "^2.0.0",
+        "@pulumi/aws": "^5.0.0",
+        "@pulumi/awsx": "^0.40.0",
         "@pulumi/kubernetesx": "^0.1.6",
-        "@pulumi/pulumi": "^2.21.0"
+        "@pulumi/kubernetes": "^3.19.4",
+        "@pulumi/pulumi": "^3.0.0"
     }
 }
