--- a/Application/src/Dockerfile
+++ b/Application/src/Dockerfile
@@ -1,19 +1,12 @@
-FROM node:18.4.0-slim
+FROM --platform=linux/amd64 node:18.4.0-slim
 
-# Create app directory
-WORKDIR /usr/src/app
+WORKDIR /app
 
-# Install app dependencies
-# A wildcard is used to ensure both package.json AND package-lock.json are copied
-# where available (npm@5+)
-COPY package*.json ./
+COPY package.json /app/package.json 
 
 RUN npm install
-# If you are building your code for production
-# RUN npm ci --only=production
 
-# Bundle app source
-COPY . .
+COPY . /app
 
 EXPOSE 8080
 CMD [ "node", "server.js" ]
